# PyQiitaSearch

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Outputs/: 191214232620_tag:スクラム.csv
